@@ -21,6 +21,7 @@
 #include <stdio.h>
 #include <sysdep-cancel.h>
 
+#if __WORDSIZE != 64
 /* Open FILE with access OFLAG.  If O_CREAT or O_TMPFILE is in OFLAG,
    a third argument is the file protection.  */
 int
@@ -36,8 +37,13 @@ __libc_open64 (const char *file, int oflag, ...)
       va_end (arg);
     }
 
+#ifdef __NR_open
   return SYSCALL_CANCEL (open, file, oflag | O_LARGEFILE, mode);
+#else
+  return SYSCALL_CANCEL (openat, AT_FDCWD, file, oflag | O_LARGEFILE, mode);
+#endif
 }
 weak_alias (__libc_open64, __open64)
 libc_hidden_weak (__open64)
 weak_alias (__libc_open64, open64)
+#endif
